--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting...</title>
-<meta http-equiv="refresh" content="0; URL=https://kancherlakishorereddy.github.io/aissq">
-<link rel="canonical" href="https://kancherlakishorereddy.github.io/aissq">
+<meta http-equiv="refresh" content="0; URL=http://aissq.binstitute.org">
+<link rel="canonical" href="http://aissq.binstitute.org">
